--- a/login.html
+++ b/login.html
@@ -2,164 +2,50 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=720, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="author" content="Nathan Zhang">
-<title>Untitled Document</title>
-<style>
-body, html {
-	border: none;
-	padding: 0px;
-	margin: 0px;
-}
-
-.circular {
-	width:35.5%;
-	border-radius:100%;
-	margin-top:27.1%;
-	border:8px solid #facba9;
-	display:inline-block;
-}
-
-.center {
-	margin:0 auto;
-	width:100%;
-	text-align:center;
-}
-
-#loginContainer {
-	margin-top:34.4%;
-}
-
-.stretchy {
-	width:64%;
-	padding-bottom:16.6%;
-	position:relative;
-}
-
-.stretchy > div {
-    position: absolute;
-    top: 0; bottom: 0; left: 0; right: 0;
-}
-
-#loginWrapper {
-	position:static;
-	margin:0 27.15%;
-	display:inline-block;
-	border:1px solid #999;
-	padding:5px 5px;
-	border-radius:10px;
-	text-align:justify;
-	width:100%;
-	height:41.4%;
-}
-
-#loginIcon {
-	float:left;
-	width: 6.6%;
-	margin: 3.5% 2.7%;
-}
-
-
-
-#inputWrapper {
-	float:left;
-	height:100%;
-	width:calc(86.4%);
-	display: inline-block;
-}
-
-
-
-#login {
-	width:100%;
-	border:none;
-	padding:none;
-	height:100%;
-	font-size:1.6em;
-}
-
-#completeContainer {
-	margin-top:12.5%;
-}
-
-#completeButton {
-	position:static;
-	margin:0 27.15%;
-	width:103%;
-	width:calc(100% + 12px);
-	height:calc(41.4% + 12px);
-	border:none;
-	border-radius:5px;
-	background:#f16703;
-	color:white;
-	font-size:40px;
-	letter-spacing:60px;
-}
-
-.unpressed {
-	box-shadow:2px 4px 4px #d05800;
-}
-
-.pressed {
-	box-shadow:none;
-}
-
-#buttonText {
-	color:white;
-	font-size:40px;
-	text-align:center;
-}
-
-#spacer {
-	width:62px;
-	display:inline-block;
-}
-
-:focus {
-	outline:none;
-}
-</style>
+<title>注册</title>
+<link href="login.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div class='center'>
-  <div><img src="userimage.jpg" class="circular"/></img>
-  <form>
-    <div id="loginContainer">
-    <div class="stretchy">
-    <div>
-      <div id="loginWrapper"> <div id="loginIcon" src="icon.png"></div>
-        <div id="inputWrapper">
-          <input type="text" name="login" id="login" placeholder="在这里填一下昵称吧~"/>
-        </div>
-        </div>
-      </div>
-      </div>
+<div id="backdrop"> </div>
+<div id="top">
+  <div id="imageContainer"><img id="userImage" src="userimage.jpg" /></div>
+</div>
+<div id="bottom">
+<form action="">
+  <div id="inputContainer">
+    <div id="inputWrapper"> <img id="userInputIcon" src="icon.png" />
+      <input id="userInput" type="text" name="username"/>
     </div>
-    <div id="completeContainer">
-    <div class="stretchy">
-    <div>
-      <button type="button" id="completeButton" class="unpressed">
-      &nbsp;完成
-      </button>
-    </div>
-    </div>
-    </div>
-  </form>
+  </div>
+  <div id="buttonContainer">
+  <button id="submitButton" type="submit" class="unpressed">
+  &nbsp;完成
+  </button>
+  </div>
+</form>
 </div>
 <script>
-var button = document.getElementById('completeButton');
-function activate(e)
-{
-	this.classList.add('pressed');
-}
-function deactivate(e)
-{
-	this.classList.remove('pressed');
-}
-button.addEventListener('mousedown',activate);
-button.addEventListener('touchstart',activate);
-button.addEventListener('mouseup',deactivate);
-button.addEventListener('touchend',deactivate);
+(function(){
+	function press(e)
+	{
+		this.classList.add('pressed');
+		this.classList.remove('unpressed');
+	}
+	
+	function unpress(e)
+	{
+		this.classList.remove('pressed');
+		this.classList.add('unpressed');
+	}
+	
+	var button = document.getElementById('submitButton');
+	button.addEventListener('mousedown',press);
+	button.addEventListener('touchstart',press);
+	button.addEventListener('mouseup',unpress);
+	button.addEventListener('touchend',unpress);
+})();
 </script>
 </body>
 </html>
