fixed minor input issues, added placeholder

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
 <form action="">
   <div id="inputContainer">
     <div id="inputWrapper"> <img id="userInputIcon" src="icon.png" />
-      <input id="userInput" type="text" name="username"/>
+      <input id="userInput" type="text" name="username" placeholder="在这里填写一个昵称吧～"/>
     </div>
   </div>
   <div id="buttonContainer">
