--- a/mainpage.html
+++ b/mainpage.html
@@ -9,201 +9,258 @@
 </head>
 
 <body>
-<div id="header">
-  <div class="center"> <img id="headerImage" src="userimage.jpg" />
-    <div id="headerImageCaption">轻舞飞扬</div>
-  </div>
+<div id="top">
+
+<div id="imageContainer">
+<div class="cutoff" id="cutoff">
+<div id="topBorder"></div>
+</div>
+<div id="bottomBorder"></div>
+<div id="imageWrapper">
+<img id="userimage" src="userimage.jpg" height="130" width="130" />
+
+</div>
+<h2 id="topCaption" class="sectionCaption">Freedom</h2>
+</div>
+</div>
+<div class="sectionCaptionContainer">
+<hr/>
+  <h2 class="sectionCaption">我的收藏</h2>
+  <img src="staricon.png" height="15" width="15" class="icon" alt="#"/>
 </div>
 <div id="storage">
-  <div class="sectionCaption">我的收藏</div>
+
   <ul class="appList">
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
-    <span class="app"><img src="userimage.jpg" class="appImage"/>
-      <div class="caption"></div>
-    </span>
+    <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+    <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
     
   </ul>
 </div>
-<div id="suggested">
-<div class="sectionCaption">
+<div class="sectionCaptionContainer">
+<hr />
+<h2 class="sectionCaption">
 和精品应用不期而遇
+</h2>
+<img src="arrow.png" class="icon" height="15" width="15" alt="->" />
 </div>
+<div id="suggested">
 <ul class="appList">
+<li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+    <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
+        <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
+      <div class="caption">应用名</div></a>
+    </li>
 </ul>
 </div>
 </div>
 <div id="bottom">
-<button type="button" id="loadMore" onclick="javascript:console.log('click');">
-<img src="refresh.png" />换一批
+<button type="button" id="loadMore">
+<img src="refresh.png" height="30" width="30" />
+<br/>
+换一批
 </button>
 </div>
 <script>
 function resize()
 {
 	var applists = document.getElementsByClassName('appList');
-	var APP_WIDTH = 62; //width of icon/caption
-	var MIN_BORDER_WIDTH = 45; //minimum spacing between app items
-	var MAX_BORDER_WIDTH = MIN_BORDER_WIDTH + APP_WIDTH;
+	var APP_WIDTH = 60; //width of icon/caption
+	var MIN_BORDER_WIDTH = 73/2; //minimum spacing between app items
+	var MAX_BORDER_WIDTH = 2*MIN_BORDER_WIDTH + APP_WIDTH;
+	styleElement = document.getElementById('customStyles');
+	if (!styleElement)
+	{
+		styleElement = document.createElement('style');
+		styleElement.id = 'customStyles';
+		styleElement.type="text/css";
+		document.head.appendChild(styleElement);
+	}
 	var list;
 	var borderWidth;
 	var parentWidth;
 	var numElements;
 	var children;
 	var style;
+	var className;
+	var classList;
+	resize._class_index = resize._class_index || 0;
 	for(var i=0, m=applists.length; i < m; i++)
 	{
 		list = applists[i];
-		parentWidth = parseFloat(window.getComputedStyle(list.parentElement).width);
+		if (list.classList.contains('resize'))
+		{
+			classList = list.classList;
+			for (var ind=0, l=classList.length;ind<l;ind++)
+			{
+				className = classList[ind];
+				if (className.indexOf("appList-") !== -1)
+				{
+					break;
+				}
+			}
+		}
+		else
+		{
+			list.classList.add('resize');
+			className = "appList-"+resize._class_index;
+			list.classList.add(className);
+			resize._class_index++;
+		}
+		parentWidth = parseFloat(window.getComputedStyle(list).width);
+		numElements = Math.floor((parentWidth + MIN_BORDER_WIDTH)/(APP_WIDTH + MIN_BORDER_WIDTH));
 		do {
-		  numElements = Math.floor((parentWidth - MIN_BORDER_WIDTH)/(APP_WIDTH + MIN_BORDER_WIDTH));
-		  borderWidth = ((parentWidth - numElements * APP_WIDTH) / (numElements + 1)) / 2;
+		  borderWidth = ((parentWidth - numElements * APP_WIDTH) / (2*(numElements-1)));
 		  numElements++;
 		}
 		while (borderWidth > MAX_BORDER_WIDTH)
-		{
-		}
-		list.style.paddingLeft = list.style.paddingRight = borderWidth + 'px';
-		children = list.children;
-		for (var j=0, len=children.length; j < len; j++)
-		{
-			style = children[j].style;
-			style.marginRight = style.marginLeft = borderWidth + 'px';
-		}
+		numElements--;
+		borderWidth += 'px';
+		styleElement.sheet.insertRule("."+className+" > li {margin-left:"+borderWidth+";\n" + "margin-right:"+borderWidth+";}\n",0);
+		styleElement.sheet.insertRule("."+className+" > li:nth-child("+numElements+"n+1) {margin-left:0;}",0);
+		styleElement.sheet.insertRule("."+className+" > li:nth-child("+numElements+"n) {margin-right:0;}",0);
+		styleElement.sheet.insertRule("."+className+" > li:nth-child(n+"+(2*numElements+1)+"){display:none;}",0);
 	}
 }
 window.addEventListener('load',resize);
 window.addEventListener('resize',resize);
+window.addEventListener('orientationChange',resize);
+
+
+var button = document.getElementById('loadMore');
+button.addEventListener('click',function(){
+	this.children[0].classList.toggle('rotate');
+});
 </script>
 </body>
 </html>
