V3 done of website, subject to final modifications. Added PSD files for later reference and png resources

--- a/mainpage.html
+++ b/mainpage.html
@@ -100,8 +100,10 @@
         <li class="app"><a href=""><img src="userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
       <div class="caption">应用名</div></a>
     </li>
-    
   </ul>
+  <button id="loadStorage">
+  <span>查看更多</span>
+  </button>
 </div>
 <div class="sectionCaptionContainer">
 <hr />
