Reorganized again for existing codebase compliance

--- a/zuimeila/zuimeila.html
+++ b/zuimeila/zuimeila.html
@@ -5,11 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="author" content="Nathan Zhang">
 <title>小米&amp;最美应用</title>
-<link href="zuimeila.css" rel="stylesheet" type="text/css">
+<link href="css/zuimeila.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<div id="top"> <img src="banner.png" height="166" width="360" alt="Banner Missing"/> </div>
+<div id="top"> <img src="images/zuimeila/banner.png" height="166" width="360" alt="Banner Missing"/> </div>
 <div id="middle">
 <div>
   <div class="sectionCaptionContainer">
@@ -18,19 +18,19 @@
   </div>
   <table id="appTable">
     <tr>
-      <td class="app"><a href=""><img src="elevate.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">Elevate</span></a></td>
-      <td class="app"><a href=""><img src="band.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">Band</span></a></td>
-      <td class="app"><a href=""><img src="timer.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">Timer</span></a></td>
+      <td class="app"><a href=""><img src="images/zuimeila/elevate.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">Elevate</span></a></td>
+      <td class="app"><a href=""><img src="images/zuimeila/band.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">Band</span></a></td>
+      <td class="app"><a href=""><img src="images/zuimeila/timer.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">Timer</span></a></td>
     </tr>
     <tr>
-      <td class="app"><a href=""><img src="foodcolor.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">食色</span></a></td>
-      <td class="app"><a href=""><img src="radium.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">Radium</span></a></td>
-      <td class="app"><a href=""><img src="LapseIt.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">Lapse It</span></a></td>
+      <td class="app"><a href=""><img src="images/zuimeila/foodcolor.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">食色</span></a></td>
+      <td class="app"><a href=""><img src="images/zuimeila/radium.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">Radium</span></a></td>
+      <td class="app"><a href=""><img src="images/zuimeila/LapseIt.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">Lapse It</span></a></td>
     </tr>
     <tr>
-      <td class="app"><a href=""><img src="RealHex.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">RealHex</span></a></td>
-      <td class="app"><a href=""><img src="pudding.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">布丁动画</span></a></td>
-      <td class="app"><a href=""><img src="tomatopotato.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">番茄土豆</span></a></td>
+      <td class="app"><a href=""><img src="images/zuimeila/RealHex.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">RealHex</span></a></td>
+      <td class="app"><a href=""><img src="images/zuimeila/pudding.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">布丁动画</span></a></td>
+      <td class="app"><a href=""><img src="images/zuimeila/tomatopotato.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">番茄土豆</span></a></td>
     </tr>
   </table>
 </div>
@@ -39,8 +39,8 @@
 <h2 class="sectionCaption orange">欢迎关注小米应用商店和最美应用官方微信</h2>
 <h3>点击下方关注有惊喜哟~</h3>
 <div id="appContainer">
-<span class="app floatleft"><a href=""><img src="xiaomi.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">小米应用商店</span></a></span>
-<span class="app floatright"><a href=""><img src="zuimeila.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">最美应用</span></a></span>
+<span class="app floatleft"><a href=""><img src="images/zuimeila/xiaomi.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">小米应用商店</span></a></span>
+<span class="app floatright"><a href=""><img src="images/zuimeila/zuimeila.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">最美应用</span></a></span>
 
 </div>
 </div>
